docs: add documentation and ajust
