# handler/createdOpening.go
@@ -9,13 +9,13 @@ import (
 
 // @BasePath /api/v1
 
-// @Sumary Create opening
+// @Summary Create opening
 // @Description Create a new job opening
 // @Tags Openings
 // @Accept json
 // @Produce json
 // @Param request body CreateOpeningRequest true "Request body"
-// @Sucess 200 {object} CreateOpeningResponse
+// @Success 200 {object} CreateOpeningResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Router /opening [post]
